Textfield: suppress cursor repaints when there's a selection

Without this, we do a considerable amount of repainting every timer tick.

BUG=645262

Review-Url: https://codereview.chromium.org/2322303002
Cr-Commit-Position: refs/heads/master@{#420667}

Former-commit-id: 1c77b2b6c04efe4e5d5d3ec5688616d65b8d0138